[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
name = "overpass"
version = "0.0.1"
description = "A client to OpenStreetMap's Overpass"
authors = ["Jakob Kammerer <jakob.kammerer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
httpx = "^0.23.0"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
respx = "^0.20.0"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
